# bank_ingest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yaml  lint.yml  tests.yml
ADR/: 0000-INDEX.md  0000-TAGS.md  0000-TEMPLATE.md  0000-structure.md  0001-architecture.md  0002-gmail-as-source.md  0003-storage-policy.md  0004-parser-strategy.md  0005-bootstrap.md  0006-parser-registry.md  0007-processing-state-port-design.md
src/bank_ingest/application/: __init__.py  dtos.py
src/bank_ingest/application/policies/: __init__.py  error_policy.py  storage_policy.py
src/bank_ingest/application/use_cases/: __init__.py  classify_message.py  fetch_labeled_messages.py  parse_message.py  persist_event.py  process_inbox_batch.py
src/bank_ingest/domain/: __init__.py  entities.py  enums.py  exceptions.py  services.py  value_objects.py
src/bank_ingest/domain/ports/: __init__.py  classifier.py  (+6 more)
src/bank_ingest/shared/: __init__.py  datetime.py  hashing.py  money.py  text.py
tests/: conftest.py
tests/fixtures/: bac_transaction_notification.html
tests/integration/persistence/: conftest.py  test_sqlalchemy_repository.py
tests/unit/application/: conftest.py  fakes.py  test_classify_message.py  test_dtos.py  test_fetch_labeled_messages.py  test_parse_message.py  test_persist_event.py  test_policies.py  test_ports.py  test_process_inbox_batch.py
tests/unit/domain/: test_entities.py  test_enums.py  test_exceptions.py  test_ports.py  test_value_objects.py
tests/unit/shared/: test_datetime.py  test_hashing.py  test_money.py  test_text.py
(+15 files in other folders)
