[project]
name = "bank-ingest"
version = "0.1.0"
description = "Automated extraction of financial events from bank notification emails"
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
  { name = "Luis Fernando Umaña Castro", email = "luis.umanacastro@ucr.ac.cr" },
]

dependencies = [
  "google-api-python-client>=2.0",
  "google-auth-oauthlib>=1.0",
  "sqlalchemy>=2.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pydantic>=2.0",
  "click>=8.0",
]

[project.scripts]
bank-ingest = "bank_ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bank_ingest"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9", "mypy>=1.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "google.auth.*"]
ignore_missing_imports = true
